filterListUnder15Char